chore: checkpoint before sourcery ai alignment